# TOGG

./: .gitignore  README.md
algorithms/TOGG-KDT/nsg/include/efanna2e/: exp_data.h
algorithms/TOGG-KDT/nsg/tests/: evaluation.cpp
algorithms/TOGG-KDT/nssg/include/: exp_data.h
algorithms/TOGG-KDT/nssg/tests/: evaluation.cpp
algorithms/TOGG-KDT/vamana/: .CMakeLists.txt.swo  CMakeLists.txt
algorithms/TOGG-KDT/vamana/include/: .index.h.swp  index.h  neighbor.h
algorithms/TOGG-KDT/vamana/src/: .index.cpp.swp  CMakeLists.txt  index.cpp  memory_mapper.cpp
algorithms/TOGG-KDT/vamana/tests/: .search_memory_index.cpp.swo  CMakeLists.txt  search_memory_index.cpp
algorithms/TOGG-KMC/nsg/include/efanna2e/: exp_data.h
algorithms/TOGG-KMC/nsg/tests/: evaluation.cpp
algorithms/TOGG-KMC/nssg/include/: exp_data.h
algorithms/TOGG-KMC/nssg/tests/: evaluation.cpp
algorithms/TOGG-KMC/vamana/: README.md
algorithms/TOGG-KMC/vamana/include/: index.h
algorithms/TOGG-KMC/vamana/src/: CMakeLists.txt  index.cpp
algorithms/TOGG-KMC/vamana/tests/: CMakeLists.txt  search_memory_index.cpp
algorithms/TOGG-KMC/vamana/tests/utils/: ivecs_to_bin.cpp
routing_evaluation/include/weavess/: index.h
routing_evaluation/src/: component_refine.cpp
routing_evaluation/test/: evaluation.cpp
