# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.

set(CMAKE_CXX_STANDARD 14)

if(MSVC)
	add_subdirectory(dll)
else()
	#file(GLOB CPP_SOURCES *.cpp)
	set(CPP_SOURCES ann_exception.cpp aux_utils.cpp index.cpp
        linux_aligned_file_reader.cpp math_utils.cpp memory_mapper.cpp
        partition_and_pq.cpp  pq_flash_index.cpp logger.cpp utils.cpp)
	add_library(${PROJECT_NAME} ${CPP_SOURCES})
  target_compile_definitions(${PROJECT_NAME} PRIVATE TOGG_KMC)
	add_library(${PROJECT_NAME}_s STATIC ${CPP_SOURCES})
  add_library(${PROJECT_NAME}_ADA_NNS STATIC ${CPP_SOURCES})
  target_compile_definitions(${PROJECT_NAME}_ADA_NNS PRIVATE ADA_NNS)
endif()
install()
